Fixed up the css so now the header for the tables are aligned centre and the values are justified.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,6 +26,23 @@
     padding: 10;
 }
 
+table, td, th {
+  padding: 5px;
+  border: 3px solid black;
+}
+
+td {
+  border: 1px solid black;
+  text-align: justify;
+  background-color: #fff;
+}
+th {
+  border: 2px solid black;
+  background-color: #ed008c;
+  color: white;
+  text-align: center;
+}
+
 .default {
 
 }
